# nimbus

./: .gitignore  1722426211435  CODE_OF_CONDUCT.md  LICENSE  README.adoc  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: code.quality.yml  nightly.report.yml  test.yml  workflow.trigger.yml
config/: .dependency-cruiser.jsonc  cucumber.yaml  eslint.config.yml  tsconfig.json
features/0.2.0/: asking.for.the.programs.name.feature
libs/@pipelet/: Cargo.toml
libs/@pipelet/lib/: index.rs
libs/@ueye/core/: index.ts
libs/core/: base.event.ts  console.logger.ts  events.ts  gone.wrong.ts  identifier.ts  index.ts  negative.ts  operation.ts  outcome.ts  positive.ts  properties.ts  type.guard.ts  unique.identifier.ts  unique.ts  went.well.ts
libs/core/constants/: ansi.escape.code.ts  arrays.ts  index.ts
libs/core/events/: base.event.ts  events.ts
libs/core/guards/: index.ts
libs/core/helpers/: array.helpers.ts  index.ts  number.helpers.ts  object.helpers.ts  text.helpers.ts
libs/core/identifiers/: index.ts
libs/core/interfaces/: interface.logger.ts
libs/core/operations/: index.ts  operation.ts
libs/core/time/: time.point.ts
libs/infra/terminal/: execution.controller.ts  exit.codes.ts  index.ts  interfaces.stream.ts  output.formatter.ts  (+6 more)
libs/utils/: array.utils.ts  buffer.utils.ts  index.ts  object.utils.ts  text.utils.ts
pipelet/: Cargo.toml
pipelet/src/: lib.rs
src/: main.ts
tests/setup/: base.config.ts  core.config.ts  coverage.config.ts  domain.config.ts  infra.config.ts  report.config.ts  utils.config.ts
(+120 files in other folders)
